Small fixes for collapsing and note refactor

--- a/src/styles/budget.scss
+++ b/src/styles/budget.scss
@@ -76,6 +76,7 @@ i.budget__month-row-note {
 }
 
 .budget__month-row-note--category-label {
+  margin-top: 4px;
   margin-left: 2px;
 }
 
